Fixed new styleguide links overlapping fullscreen preview

--- a/src/assets/scss/development/modules/dev-preview/_dev-preview.scss
+++ b/src/assets/scss/development/modules/dev-preview/_dev-preview.scss
@@ -102,6 +102,7 @@
       height: 100%;
       background: white;
       overflow-y: auto;
+      z-index: 10000;
     }
   }
 
